--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.3.3",
     "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.1",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.5"
   },
